# Simple-interpreter-js

./: .gitignore  README.md
interpreter/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  interpreter
interpreter/src/: ast.cpp  ast.h  environment.cpp  environment.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  token.cpp  token.h
interpreter/test_programs/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test_arrays.txt  test_for.txt  test_objects.txt
